# docs/swagger.json
@@ -21,14 +21,17 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/auth/test": {
+        "/api/v1/admin": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "summary": "Test auth",
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Admin personal cabinet for managing the site",
                 "responses": {}
             }
         },
