# internal/transport/http/adminv1.go
@@ -1,0 +1,16 @@
+package http
+
+import (
+	"fmt"
+
+	"github.com/gin-gonic/gin"
+)
+
+// adminCabinet godoc
+// @Summary Admin personal cabinet for managing the site
+// @Tags admin
+// @Security ApiKeyAuth
+// @Router /api/v1/admin [get]
+func (h *Handler) adminCabinetV1(c *gin.Context) {
+	fmt.Println("adminCabinetV1")
+}
